syntax = "proto3";

option java_package = "dev.angryl1on.grpc";
option java_outer_classname = "TransactionsProto";

message TransactionRequest {
  string id = 1;
}

message TransactionListRequest {
  // do nothing
  // [OPTIONAL] You can add filters here
}

message Transaction {
  string id = 1;
  double amount = 2;
  string date = 3;
  string type = 4;
}

message CreateTransactionRequest {
  double amount = 1;
  string date = 2;
  string type = 3;
}

message UpdateTransactionRequest {
  string id = 1;
  double amount = 2;
  string date = 3;
  string type = 4;
}

message DeleteTransactionRequest {
  string id = 1;
}

message TransactionResponse {
  bool success = 1;
  string message = 2;
  string id = 3;
  double amount = 4;
  string date = 5;
  string type = 6;
}

message TransactionListResponse {
  repeated TransactionResponse transactions = 1;
}

service DomainService {
  // Creating a new transaction (asynchronous POST -> via RabbitMQ queue)
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);

  // Receiving a transaction by ID (synchronous GET)
  rpc GetTransactionById(TransactionRequest) returns (TransactionResponse);

  // Retrieving a list of transactions (synchronous GET)
  rpc GetAllTransactions(TransactionListRequest) returns (TransactionListResponse);

  // Transaction update (asynchronous PUT -> via RabbitMQ queue)
  rpc UpdateTransaction(UpdateTransactionRequest) returns (TransactionResponse);

  // Deleting a transaction (asynchronous DELETE -> via RabbitMQ queue)
  rpc DeleteTransaction(DeleteTransactionRequest) returns (TransactionResponse);
}
